--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
-anyconfig==0.9.11; python_version >= "3.6" and python_version < "3.9"
-arrow==0.17.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
+anyconfig==0.10.0; python_version >= "3.6" and python_version < "3.9"
+arrow==1.0.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 binaryornot==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 cachetools==4.2.1; python_version >= "3.6" and python_version < "3.9"
 certifi==2020.12.5; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
@@ -8,9 +8,10 @@ chardet==4.0.0; python_version >= "3.6" and python_full_version < "3.0.0" and py
 click==7.1.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 cookiecutter==1.7.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 cycler==0.10.0; python_version >= "3.6"
-fsspec==0.8.5; python_version > "3.6" and python_version < "3.9"
+dynaconf==3.1.4; python_version >= "3.6" and python_version < "3.9"
+fsspec==0.8.7; python_version > "3.6" and python_version < "3.9"
 gitdb==4.0.5; python_version >= "3.6" and python_version < "3.9"
-gitpython==3.1.13; python_version >= "3.6" and python_version < "3.9"
+gitpython==3.1.14; python_version >= "3.6" and python_version < "3.9"
 idna==2.10; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 ipython-genutils==0.2.0; python_version >= "3.7" and python_version < "3.9"
 jinja2-time==0.2.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
@@ -19,13 +20,13 @@ jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and 
 joblib==1.0.1; python_version >= "3.6"
 jupyter-client==6.1.11; python_version >= "3.6" and python_version < "3.9"
 jupyter-core==4.7.1; python_version >= "3.6" and python_version < "3.9"
-kedro==0.17.0; python_version >= "3.6" and python_version < "3.9"
+kedro==0.17.1; python_version >= "3.6" and python_version < "3.9"
 kiwisolver==1.3.1; python_version >= "3.6"
 markupsafe==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 matplotlib==3.3.4; python_version >= "3.6"
 numpy==1.20.1; python_version >= "3.7"
-pandas==1.2.2; python_full_version >= "3.7.1" and python_version >= "3.6"
-pillow==8.1.0; python_version >= "3.6"
+pandas==1.2.3; python_full_version >= "3.7.1" and python_version >= "3.6"
+pillow==8.1.2; python_version >= "3.6"
 pip-tools==5.5.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.4.0"
 poyo==0.5.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
@@ -49,7 +50,7 @@ text-unidecode==1.3; python_version >= "3.6" and python_full_version < "3.0.0" a
 threadpoolctl==2.1.0; python_version >= "3.6"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.3.0"
 toposort==1.6; python_version >= "3.6" and python_version < "3.9"
-torch==1.7.1; python_full_version >= "3.6.2"
+torch==1.8.0; python_full_version >= "3.6.2"
 tornado==6.1; python_version >= "3.6" and python_version < "3.9"
 traitlets==5.0.5; python_version >= "3.7" and python_version < "3.9"
 typing-extensions==3.7.4.3; python_full_version >= "3.6.2"
