--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
-# Kedro Project
+# Kedro Project #
 
-## Ignore potentially sensitive credentials files
+## Ignore potentially sensitive credentials files ##
 conf/**/*credentials*
 
-## Ignore everything in the following folders except their sub-folders
+## Ignore everything in the following folders except their sub-folders ##
 data/**
 logs/**
 !data/**/
 !logs/**/
 
-## Keep all .gitkeep files
+## Ignore logs in root folder ##
+info.log
+
+## Keep all .gitkeep files ##
 !.gitkeep
 
-# Common files
+# Common files #
 
-## mypy
+## mypy ##
 .mypy_cache/
 
-## Poetry
+## Poetry ##
 poetry.lock
 
-## Python byte-compiled files
+## Python byte-compiled files ##
 __pycache__/
