--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,57 +1,58 @@
-anyconfig==0.10.0; python_version >= "3.6" and python_version < "3.9"
-arrow==1.0.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
+anyconfig==0.10.1; python_version >= "3.6" and python_version < "3.9"
+arrow==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 binaryornot==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-cachetools==4.2.1; python_version >= "3.6" and python_version < "3.9"
-certifi==2020.12.5; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-cffi==1.14.5; python_version >= "3.6" and python_version < "3.9" and implementation_name == "pypy"
+cachetools==4.2.2; python_version >= "3.6" and python_version < "3.9"
+certifi==2021.5.30; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
+cffi==1.14.5; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1" and implementation_name == "pypy"
 chardet==4.0.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 click==7.1.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-cookiecutter==1.7.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
+cookiecutter==1.7.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 cycler==0.10.0; python_version >= "3.7"
 dynaconf==3.1.4; python_version >= "3.6" and python_version < "3.9"
 fsspec==0.8.7; python_version > "3.6" and python_version < "3.9"
 gitdb==4.0.7; python_version >= "3.6" and python_version < "3.9"
-gitpython==3.1.14; python_version >= "3.6" and python_version < "3.9"
+gitpython==3.1.17; python_version >= "3.6" and python_version < "3.9"
 idna==2.10; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-ipython-genutils==0.2.0; python_version >= "3.7" and python_version < "3.9"
+ipython-genutils==0.2.0; python_version >= "3.7" and python_version < "3.9" and python_full_version >= "3.6.1"
 jinja2-time==0.2.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 jinja2==2.11.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.3.0"
 joblib==1.0.1; python_version >= "3.6"
-jupyter-client==6.1.12; python_version >= "3.6" and python_version < "3.9"
-jupyter-core==4.7.1; python_version >= "3.6" and python_version < "3.9"
-kedro==0.17.2; python_version >= "3.6" and python_version < "3.9"
+jupyter-client==6.2.0; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1"
+jupyter-core==4.7.1; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1"
+kedro==0.17.3; python_version >= "3.6" and python_version < "3.9"
 kiwisolver==1.3.1; python_version >= "3.7"
-markupsafe==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-matplotlib==3.4.0; python_version >= "3.7"
-numpy==1.20.2; python_version >= "3.7"
-pandas==1.2.3; python_full_version >= "3.7.1" and python_version >= "3.6"
-pillow==8.1.2; python_version >= "3.7"
+markupsafe==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
+matplotlib==3.4.2; python_version >= "3.7"
+nest-asyncio==1.5.1; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1"
+numpy==1.20.3; python_version >= "3.7" and python_full_version >= "3.7.1" and python_version < "3.10"
+pandas==1.2.4; python_full_version >= "3.7.1" and python_version >= "3.6"
+pillow==8.2.0; python_version >= "3.7"
 pip-tools==5.5.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.4.0"
 poyo==0.5.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-py==1.10.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" and implementation_name == "pypy" or python_version >= "3.6" and python_version < "3.9" and implementation_name == "pypy" and python_full_version >= "3.4.0"
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" and implementation_name == "pypy" or python_version >= "3.6" and python_version < "3.9" and implementation_name == "pypy" and python_full_version >= "3.4.0"
+py==1.10.0; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1" and implementation_name == "pypy"
+pycparser==2.20; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1" and implementation_name == "pypy"
 pyparsing==2.4.7; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
-python-dateutil==2.8.1; python_version >= "3.7" and python_version < "3.9" and python_full_version >= "3.7.1" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0")
+python-dateutil==2.8.1; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.7.1" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0")
 python-json-logger==0.1.11; python_version >= "3.6" and python_version < "3.9"
-python-slugify==4.0.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
+python-slugify==5.0.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 pytz==2021.1; python_full_version >= "3.7.1" and python_version >= "3.6"
-pywin32==300; python_version >= "3.6" and python_version < "3.9" and sys_platform == "win32"
+pywin32==301; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1" and sys_platform == "win32"
 pyyaml==5.4.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.0"
-pyzmq==22.0.3; python_version >= "3.6" and python_version < "3.9"
+pyzmq==22.1.0; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1"
 requests==2.25.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
-scikit-learn==0.24.1; python_version >= "3.6"
-scipy==1.6.2; python_version >= "3.7" and python_version < "3.10"
+scikit-learn==0.24.2; python_version >= "3.6"
+scipy==1.6.3; python_version >= "3.7" and python_version < "3.10"
 seaborn==0.11.1; python_version >= "3.6"
-six==1.15.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.7" and python_version < "3.9" and python_full_version >= "3.5.0"
+six==1.16.0; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7")
 smmap==4.0.0; python_version >= "3.6" and python_version < "3.9"
 text-unidecode==1.3; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.5.0"
 threadpoolctl==2.1.0; python_version >= "3.6"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.3.0"
 toposort==1.6; python_version >= "3.6" and python_version < "3.9"
 torch==1.8.1; python_full_version >= "3.6.2"
-tornado==6.1; python_version >= "3.6" and python_version < "3.9"
-traitlets==5.0.5; python_version >= "3.7" and python_version < "3.9"
-typing-extensions==3.7.4.3; python_full_version >= "3.6.2"
-urllib3==1.26.4; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_full_version >= "3.5.0" and python_version < "3.9" and python_version >= "3.6"
+tornado==6.1; python_version >= "3.6" and python_version < "3.9" and python_full_version >= "3.6.1"
+traitlets==5.0.5; python_version >= "3.7" and python_version < "3.9" and python_full_version >= "3.6.1"
+typing-extensions==3.10.0.0; python_full_version >= "3.6.2"
+urllib3==1.26.5; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.9" or python_full_version >= "3.5.0" and python_version < "3.9" and python_version >= "3.6"
